objects/Activity_Definition__c.object
<CustomObject>
    <description>Contains Offset Criteria, Offset days, Sequence and Terminal Activity associated with an Activity definition.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee_Role__c</fullName>
        <label>CDK Assignee Role</label>
        <picklist>
            <picklistValues>
                <fullName>3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Solutions Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Systems Analyst​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car!nk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Manager (CAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Data Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist (Unhook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collector​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Specialist (ICD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Librarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Follow-Up Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist (Box Upgrade)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Project Manager (Network / IPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Tax Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM IT Support Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_of_Children_Non_RMS_Owned__c</fullName>
        <label>Count of Children Non-RMS Owned</label>
        <summaryFilterItems>
            <field>Task_Definition__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Task_Definition__c.Is_RMS_Owned__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Task_Definition__c.Activity_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Children_RMS_Owned__c</fullName>
        <label>Count of Children RMS Owned</label>
        <summaryFilterItems>
            <field>Task_Definition__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Task_Definition__c.Is_RMS_Owned__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Task_Definition__c.Activity_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Activity__c</fullName>
        <label>External Activity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_RMS_Key__c</fullName>
        <description>The Logical (concatenated) RMS unique key for this specific Activity Definition record.  It comprises a concatenated string of the Parent (i.e. Milestone Definition) RMS Activity Code, and this record&apos;s RMS Assignment Type.  The string is concatenated using a &quot;|&quot; delimiter to combine the 2 values.</description>
        <formula>IF((ISNULL(RMS_Assignment_Type__c) || ISBLANK(RMS_Assignment_Type__c)),RMS_Assignment_Type__c, Parent_RMS_Activity_Code__c &amp; &quot;|&quot; &amp; RMS_Assignment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logical RMS Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Definition__c</fullName>
        <label>Milestone Definition</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Milestone_Definition__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone_Definition__c</referenceTo>
        <relationshipLabel>Project Activity Definitions</relationshipLabel>
        <relationshipName>Activity_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <formula>Milestone_Definition__r.Description__c</formula>
        <label>Milestone Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_Criteria__c</fullName>
        <label>Offset Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Roll Call Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated Install Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Milestone_Product_Ct__c</fullName>
        <description>Field to display the parent Milestone Definition Product Count</description>
        <formula>Milestone_Definition__r.Count_of_Products__c</formula>
        <inlineHelpText>Automated formula to display product count on the parent milestone</inlineHelpText>
        <label>Parent Milestone Product Ct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_RMS_Activity_Code__c</fullName>
        <description>The parent (Milestone Definition) record&apos;s RMS Activity Code</description>
        <formula>Milestone_Definition__r.RMS_Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent RMS Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date_Offset__c</fullName>
        <label>Planned End Date Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date_Offset__c</fullName>
        <label>Planned Start Date Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_Assignment_Type__c</fullName>
        <description>This field corresponds to the RMS assignment label</description>
        <inlineHelpText>Please enter the RMS assignment label for this Activity</inlineHelpText>
        <label>RMS Assignment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Task_Definition_Children__c</fullName>
        <label>Total Task Definition Children</label>
        <summaryFilterItems>
            <field>Task_Definition__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Task_Definition__c.Activity_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Activity Definition</label>
    <nameField>
        <displayFormat>AID-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activity Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Child_Has_Diff_System_Owner</fullName>
        <active>true</active>
        <description>Before an Activity Definition can be activated, all of its active Task Definition children must reflect the same implied system owner (either all RMS or all non-RMS).  This record&apos;s owner is implied by presence of a non-null value in RMS Assignment Type.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(RMS_Assignment_Type__c) || ISNULL(RMS_Assignment_Type__c)), Total_Task_Definition_Children__c &gt; 0, (Total_Task_Definition_Children__c-Count_of_Children_RMS_Owned__c != 0), Active__c) ||

AND(ISBLANK(RMS_Assignment_Type__c) || ISNULL(RMS_Assignment_Type__c), Total_Task_Definition_Children__c &gt; 0, (Total_Task_Definition_Children__c -Count_of_Children_Non_RMS_Owned__c != 0), Active__c)</errorConditionFormula>
        <errorMessage>To activate this record with a non-null RMS Assignment Type, you must ensure all of its child Task Definition records have &apos;Is RMS Owned&apos; flag set to true.  To activate with a blank RMS Assignment Type, set the children&apos;s flag to false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Add_RMSAssignmentType_If_NoParent</fullName>
        <active>true</active>
        <description>You cannot update the RMS Assignment Type field with a non-null (or non-blank) value if its parent Milestone Definition Id does not have an RMS Activity Code.</description>
        <errorConditionFormula>NOT(ISBLANK(RMS_Assignment_Type__c)) &amp;&amp; ISBLANK(Parent_RMS_Activity_Code__c)</errorConditionFormula>
        <errorMessage>You cannot update the RMS Assignment Type field with a non-null (or non-blank) value if its parent Milestone Definition Id does not have an RMS Activity Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Definition_If_Active</fullName>
        <active>true</active>
        <description>Cannot update Definition if it is active.</description>
        <errorConditionFormula>PRIORVALUE(Active__c) != false &amp;&amp; Active__c = true &amp;&amp;  NOT(ISNEW()) &amp;&amp;  (ISCHANGED( Planned_Start_Date_Offset__c ) ||  ISCHANGED( Planned_End_Date_Offset__c ) || ISCHANGED( CDK_Assignee_Role__c )|| ISCHANGED( Description__c )|| ISCHANGED( External_Activity__c )|| ISCHANGED( Milestone_Definition__c) || ISCHANGED( Offset_Criteria__c )|| ISCHANGED( RMS_Assignment_Type__c )|| ISCHANGED( Sequence__c ))</errorConditionFormula>
        <errorMessage>This definition is active. You cannot update an active definition.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID_Planned_Start_End_Date_Offset</fullName>
        <active>true</active>
        <description>If Estimated Install Date is selected as the offset criteria, then planned start date offset has to be greater than or equal to planned end date offset.</description>
        <errorConditionFormula>IF( ISPICKVAL( Offset_Criteria__c , &quot;Estimated Install Date&quot;) ,  ((Planned_Start_Date_Offset__c &lt; Planned_End_Date_Offset__c) &amp;&amp; ( ((Planned_Start_Date_Offset__c &lt; 0)&amp;&amp;(Planned_End_Date_Offset__c &lt; 0)) || ((Planned_Start_Date_Offset__c &gt; 0)&amp;&amp;(Planned_End_Date_Offset__c &gt; 0)) ) ) || ((Planned_Start_Date_Offset__c &lt; 0)&amp;&amp;(Planned_End_Date_Offset__c &gt; 0)), FALSE) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>For offset criteria &quot;Estimated Install Date,&quot; Planned Start Date Offset has to be greater than or equal to Planned End Date Offset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Active_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Total_Task_Definition_Children__c = 0, Active__c)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Cannot set as Active if there are no Active Task Definition assign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_EID_Negative_Planned_Start_End</fullName>
        <active>true</active>
        <description>Only when Offset Criteria is &quot;Estimated Install Date,&quot; can the Planned Start and End Date Offsets be negative.</description>
        <errorConditionFormula>NOT( ISPICKVAL(Offset_Criteria__c, &quot;Estimated Install Date&quot;) ) &amp;&amp; ( ( Planned_Start_Date_Offset__c &lt; 0 ) || ( Planned_End_Date_Offset__c &lt; 0 ) ) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Only &quot;Estimated Install Date&quot; Offset Criteria can have negative Planned Date Offsets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RCD_Planned_Start_End_Date_Offset</fullName>
        <active>true</active>
        <description>If Roll Call Date is selected as the offset criteria, then planned start date offset has to be less than or equal to planned end date offset.</description>
        <errorConditionFormula>IF( ISPICKVAL( Offset_Criteria__c , &quot;Roll Call Date&quot;) , ( Planned_Start_Date_Offset__c &gt; Planned_End_Date_Offset__c ), FALSE) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>For offset criteria &quot;Roll Call Date,&quot; Planned Start Date Offset has to be less than or equal to Planned End Date Offset</errorMessage>
    </validationRules>
</CustomObject>